--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: scout
+        application_name: Scoot
         environment_id: e-t3z9myh8nm
         version_label: v-${{ github.run_number }}
         region: eu-north-1
