--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: Scoot
-        environment_id: e-t3z9myh8nm
+        environment_name: Scoot-env
         version_label: v-${{ github.run_number }}
         region: eu-north-1
         deployment_package: deploy.zip
