--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "my-static-site",
+  "name": "Scoot",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "build": "echo 'No build step'"
   },
   "dependencies": {
     "express": "^4.18.2"
