--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.22.1"
   },
   "engines": {
-    "node": ">=24.0.0"
+    "node": "20.x"
   },
   "description": "",
   "repository": {
