--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: "Scoot"
-          environment_name: "Scoot-env-1"
+          application_name: "Scout"
+          environment_name: "Scout-env"
           version_label: "v-${{ github.run_number }}"
           region: eu-north-1
           deployment_package: deploy.zip
