--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: "24"
 
       # Step 3: Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm installs
 
       # Step 4: Build (if needed)
       - name: Build
