--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,30 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "24"
 
-      # Step 3: Install dependencies
       - name: Install dependencies
-        run: npm installs
+        run: npm install
 
-      # Step 4: Build (if needed)
       - name: Build
         run: npm run build || echo "No build step"
 
-      # Step 5: Zip the project for EB
       - name: Prepare deploy package
         run: |
           zip -r deploy.zip . -x "*.git*" "*.github*" "node_modules/*" "*.zip"
 
-      # Step 6: Deploy to Elastic Beanstalk
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v21
         with:
@@ -42,6 +36,6 @@ jobs:
           application_name: "scout"
           environment_name: "Scout-env"
           version_label: "v-${{ github.run_number }}"
-          region: eu-north-1
+          region: us-east-1
           deployment_package: deploy.zip
           use_existing_version_if_available: true
